objects/cc_oo_PriceList__c.object
<CustomObject>
    <description>This is the custom pricelist to display the pricing options in product detail page</description>
    <fields>
        <fullName>cc_oo_BulkDiscuount__c</fullName>
        <label>Bulk discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cc_oo_ChangeInPrice__c</fullName>
        <description>Change in price. Diffrence is privisous price. Can be used in edit order and reorde, apend order senario</description>
        <label>Change in Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cc_oo_DwChecksum__c</fullName>
        <label>dw checksum</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cc_oo_ExpirationDate__c</fullName>
        <defaultValue>DATE(2099, 1, 1)</defaultValue>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cc_oo_IsJDEPriceUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is JDE Price Updated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cc_oo_NetListPrice__c</fullName>
        <label>Net List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cc_oo_PackageDiscount__c</fullName>
        <label>Package Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cc_oo_PalletPrice__c</fullName>
        <label>Pallet Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cc_oo_PlantID__c</fullName>
        <description>for Seller ID or Plant ID</description>
        <label>Plant ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_PriceFrequncey__c</fullName>
        <label>Frequency</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_PriceListID__c</fullName>
        <description>JDE PriceListNumber</description>
        <externalId>true</externalId>
        <label>Price List Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cc_oo_ProductID__c</fullName>
        <description>Product ID</description>
        <label>Product ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup(E_Product__c)</description>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>cc_oo_PriceLists</relationshipLabel>
        <relationshipName>cc_oo_PriceLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cc_oo_RouteCode__c</fullName>
        <label>Route Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seller</label>
        <referenceTo>ccrz__E_Seller__c</referenceTo>
        <relationshipLabel>cc_oo_PriceLists</relationshipLabel>
        <relationshipName>cc_oo_PriceLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cc_oo_ShipToNumber__c</fullName>
        <label>Ship To Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cc_oo_ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ShipTo</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC OO PriceLists</relationshipLabel>
        <relationshipName>CC_OO_PriceLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cc_oo_isfreightincluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsFreightIncluded</label>
        <type>Checkbox</type>
    </fields>
    <label>CC OO PriceList</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>cc_oo_IsJDEPriceUpdated__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC OO PriceLists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>